Fix: overflow hidden 적용

--- a/src/index.css
+++ b/src/index.css
@@ -10,4 +10,5 @@
 body {
   width: 100%;
   margin: 0;
+  overflow: hidden; /* 전체 페이지에서 스크롤을 숨깁니다 */
 }
